--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@barba/core": "^2.8.0",
     "@barba/prefetch": "^2.1.10",
     "@barba/router": "^2.1.10",
+    "grained": "^0.0.2",
     "gsap": "^3.5.1",
     "reset-css": "^5.0.1"
   }
